syntax = "proto3";

package greeter.v1;

option go_package = "github.com/hrz8/altalune/gen/greeter/v1;greeterv1";

import "greeter/v1/hello.proto";
import "greeter/v1/name.proto";

service GreeterService {
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse) {}
  rpc GetAllowedNames(GetAllowedNamesRequest) returns (GetAllowedNamesResponse) {}
}
